--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+     
+    <div class="flex conteiner">
+        <header>
+            <a href="index.html">
+                <img class="logo" src="allPort.png" alt="">
+            </a>
+
+        </header>
+    </div>
 </body>
 </html>
