--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
      
-    <div class="flex conteiner">
+    <div class="conteiner">
         <header>
-            <a href="index.html">
+            <a class="logo" href="index.html">
                 <img class="logo" src="allPort.png" alt="">
             </a>
-
+            <nav>
+                <ul>
+                    <li>News</li>
+                    <li>Services</li>
+                    <li>Job</li>
+                    <li>Who We Are</li>
+                </ul>
+            </nav>
         </header>
     </div>
 </body>
