--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
 
 <body>
 
-
-
-
-
     <div class="conteiner">
 
         <header>
@@ -31,8 +27,15 @@
                         <li>Who We Are</li>
                     </ul>
                 </nav>
-
         </header>
+
+        <section>
+
+            
+
+
+
+        </section>
     </div>
 </body>
 
