--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
         <section>
             <h1>Company news</h1>
 
+            <div class="6_card">
+                <div class="cards">
+                    <img src="Rectangle 10.png" alt="">
+                    <p>Open the article and give it a quick read. </p>
+                </div>
+
+
+
+
+            </div>
+
 
 
 
