--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <div class="6_card">
                 <div class="cards">
-                    <img src="pics/lamp.jpg" alt="">
+                    <img src="Rectangle 10.png" alt="">
                     <p>Open the article and give it a quick read. </p>
                 </div>
 
