--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
             <div class="6_card">
                 <div class="cards">
-                    <img src="Rectangle 10.png" alt="">
-                    <p>Open the article and give it a quick read. </p>
+                   <img src="photos/Rectangle 10.png" alt="">
+                    <p></p>
                 </div>
 
 
