--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             <div class="6_card">
                 <div class="cards">
                    <img src="photos/Rectangle 10.png" alt="">
-                    <p></p>
+                    <p>Open the article and give it a quick read. </p>
+                    
+                    
                 </div>
 
 
