--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section>
             <h1>Company news</h1>
 
-            <div class="6_card">
+            <div class="six_card">
                 <div class="cards">
                    <img src="photos/Rectangle 10.png" alt="">
                     <p>Open the article and give it a quick read. </p>
