--- a/index.html
+++ b/index.html
@@ -35,22 +35,31 @@
 
             <div class="six_card">
                 <div class="cards">
-                   <img src="photos/Rectangle 10.png" alt="">
+                    <img src="photos/Rectangle 10.png" alt="">
                     <p>Open the article and give it a quick read. </p>
-                    
-                    
+                    <div>
+                        <img src="photos/Rectangle 11.png" alt="">
+                        <p>Open the article and give it a quick read. </p>
+                    </div>
+                    <div>
+                        <img src="photos/Rectangle 12.png" alt="">
+                        <p>Open the article and give it a quick read. </p>
+                    </div>
+                    <div>
+                        <img src="photos/Rectangle 13.png" alt="">
+                        <p>Open the article and give it a quick read. </p>
+                    </div>
+                    <div>
+                        <img src="photos/Rectangle 14.png" alt="">
+                        <p>Open the article and give it a quick read. </p>
+                    </div>
+                    <div>
+                        <img src="photos/Rectangle 15.png" alt="">
+                        <p>Open the article and give it a quick read. </p>
+                    </div>
+
                 </div>
-
-
-
-
-            </div>
-
-
-
-
         </section>
-    </div>
 </body>
 
 </html>
