--- a/index.html
+++ b/index.html
@@ -30,35 +30,56 @@
                 </nav>
         </header>
 
-        <section>
-            <h1>Company news</h1>
+        
 
-            <div class="six_card">
+        <section>
+
+            <h1>
+                Company News
+            </h1>
+
+
+            <div class="sixcard">
+
                 <div class="cards">
+
                     <img src="photos/Rectangle 10.png" alt="">
-                    <p>Open the article and give it a quick read. </p>
-                    <div>
-                        <img src="photos/Rectangle 11.png" alt="">
-                        <p>Open the article and give it a quick read. </p>
-                    </div>
-                    <div>
-                        <img src="photos/Rectangle 12.png" alt="">
-                        <p>Open the article and give it a quick read. </p>
-                    </div>
-                    <div>
-                        <img src="photos/Rectangle 13.png" alt="">
-                        <p>Open the article and give it a quick read. </p>
-                    </div>
-                    <div>
-                        <img src="photos/Rectangle 14.png" alt="">
-                        <p>Open the article and give it a quick read. </p>
-                    </div>
-                    <div>
-                        <img src="photos/Rectangle 15.png" alt="">
-                        <p>Open the article and give it a quick read. </p>
-                    </div>
+                    <p>Open the article and give it a quick read.</p>
 
                 </div>
+
+                <div class="cards">
+                    <img src="photos/Rectangle 11.png" alt="">
+                    <p>Open the article and give it a quick read.</p>
+
+                </div>
+
+                <div class="cards">
+                    <img src="photos/Rectangle 12.png" alt="">
+                    <p>Open the article and give it a quick read.</p>
+                </div>
+
+                <div class="cards">
+                    <img src="photos/Rectangle 13.png" alt="">
+                    <p>Open the article and give it a quick read.</p>
+                </div>
+
+                <div class="cards">
+                    <img src="photos/Rectangle 14.png" alt="">
+                    <p>Open the article and give it a quick read.</p>
+
+                </div>
+
+                <div class="cards">
+                    <img src="photos/Rectangle 15.png" alt="">
+                    <p>Open the article and give it a quick read.</p>
+
+                </div>
+
+
+
+            </div>
+
         </section>
 </body>
 
