--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 
 <body>
 
+    <!--conteiner-->
+
     <div class="conteiner">
+
+    <!--header-->
 
         <header>
             <a class="logo" href="index.html">
@@ -34,7 +38,7 @@
                 </nav>
         </header>
 
-
+        <!--section-->
 
         <section>
 
@@ -83,6 +87,14 @@
             </div>
 
         </section>
+
+        <!--footer-->
+
+        <img src="photos/Rectangle 15.png" alt="">
+
+        <div class="search">
+            <i><i class="fa-thin fa-magnifying-glass"></i></i>
+        </div>
 
 
 </body>
