--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <!--footer-->
 
-        <img src="photos/Rectangle 15.png" alt="">
+        <img src="photos/allPort.png" alt="">
 
         <div class="search">
             <i><i class="fa-thin fa-magnifying-glass"></i></i>
