--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="conteiner">
 
-    <!--header-->
+        <!--header-->
 
         <header>
             <a class="logo" href="index.html">
@@ -90,12 +90,14 @@
 
         <!--footer-->
 
-        <img src="photos/allPort.png" alt="">
+        <footer>
+            <img src="photos/allPort.png" alt="">
 
-        <div class="search">
-            <i><i class="fa-thin fa-magnifying-glass"></i></i>
-        </div>
+            <div class="search">
+                <i><i class="fa-thin fa-magnifying-glass"></i></i>
+            </div>
 
+        </footer>
 
 </body>
 
