--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <!--footer-->
 
         <footer>
-            <img src="photos/allPort.png" alt="">
+            <img class="fphoto" src="photos/allPort.png" alt="">
 
             <div class="search">
                 <i><i class="fa-thin fa-magnifying-glass"></i></i>
