--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <img class="fphoto" src="photos/allPort.png" alt="">
 
             <div class="search">
-                <i class="fa-thin fa-magnifying-glass"></i>
+                <i class="fa-solid fa-magnifying-glass"></i>
             </div>
 
         </footer>
